--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,20 @@
-<h2> Home </h2>
+<h1>Strickly Rich Ent</h1>
+
+<body>
+    <ul>
+        <li>Beat Store</li>
+        <li>About</li>
+    </ul>
+    
+    <ul>
+        <li>Sign up</li>
+        <li>Login</li>
+        <li></li>
+    </ul>
+    
+    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/22678961&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+</body>
+
+
+
+
