--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
 <h1>Strickly Rich Ent</h1>
 
+<iframe src="//www.myflashstore.net/widgets/html5/?uid=77996&scheme=flatui-blue&share=true&total-plays=true" width="750" height="510" frameborder="0" scrolling="no"></iframe>
