Added Bootstrap classes, copy and additional navbar for beat style selection

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,18 @@
   </div>
 </nav>
 
+<div>
+  <ul class="nav nav-tabs">
+    <li role="presentation" class="active"><a href="#"> New Beats </a></li>
+    <li role="presentation"><a href="#"> Hip-Hop </a></li>
+    <li role="presentation"><a href="#"> Trap </a></li>
+  </ul>
+</div>
 
-<%= yield %>
+
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
