--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Strickly Rich Ent</h1>
+<div class="jumbotron text-center">
+    <h1>Strickly Rich Ent. Official Website </h1>
+</div>
 
 <iframe src="//www.myflashstore.net/widgets/html5/?uid=77996&scheme=flatui-blue&share=true&total-plays=true" width="750" height="510" frameborder="0" scrolling="no"></iframe>
